Yeeted the authorization as we're not going to use that anyway

--- a/SimTECH/SimTECH/Pages/Admin.razor
+++ b/SimTECH/SimTECH/Pages/Admin.razor
@@ -1,5 +1,5 @@
 ﻿@page "/admin"
-@attribute [Authorize(Roles = "admin")]
 
-<h3>Admin</h3>
-<p>Exclusive to admins >:)</p>
+<MudContainer>
+    <MudText>Authentication has been disabled</MudText>
+</MudContainer>
