--- a/SimTECH/SimTECH/Pages/Racing/StrategyPicker.razor
+++ b/SimTECH/SimTECH/Pages/Racing/StrategyPicker.razor
@@ -1,4 +1,4 @@
-﻿<MudDialog Class="test-dialog-shadow">
+﻿<MudDialog Class="dialog-shadow">
     <TitleContent>
         Pick here a strategy to use for the selected driver
     </TitleContent>
