--- a/SimTECH/SimTECH/Pages/Season/SeasonTeamEditor.razor
+++ b/SimTECH/SimTECH/Pages/Season/SeasonTeamEditor.razor
@@ -47,6 +47,12 @@
                 </MudSelect>
             }
         </MudForm>
+        <MudPaper Height="100px" Class="d-flex flex-column">
+            <MudText Typo="Typo.h6" Class="flex-initial">Preview</MudText>
+            <div class="flex-auto d-flex justify-center align-center" style="background-color:@(Model.Colour); color:@(Model.Accent)">
+                <MudText Class="ma-auto">@Model.Name</MudText>
+            </div>
+        </MudPaper>
     </DialogContent>
     <DialogActions>
         <MudButton OnClick="Cancel">Cancel</MudButton>
