--- a/SimTECH/SimTECH/_Imports.razor
+++ b/SimTECH/SimTECH/_Imports.razor
@@ -1,6 +1,4 @@
-﻿@using Microsoft.AspNetCore.Authorization
-@using Microsoft.AspNetCore.Components.Authorization
-@using Microsoft.AspNetCore.Components.Forms
+﻿@using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Server.ProtectedBrowserStorage
 @using Microsoft.AspNetCore.Components.Web
@@ -23,5 +21,10 @@
 @using System.ComponentModel
 @using System.Net.Http
 
-@*Authorize attribute underneath would demand that an user is logged in for the whole application (whole since it's applied here)*@
-@attribute [Authorize]
+@*All removed authentication and authorization services
+    @using Microsoft.AspNetCore.Authorization
+    @using Microsoft.AspNetCore.Components.Authorization
+
+Authorize attribute underneath would demand that an user is logged in for the whole application (whole since it's applied here)
+  attribute [Authorize]
+*@
