--- a/SimTECH/SimTECH/wwwroot/css/site.css
+++ b/SimTECH/SimTECH/wwwroot/css/site.css
@@ -59,6 +59,10 @@ html, body {
     width: 800px;
 }
 
+.dialog-shadow {
+    box-shadow: var(--mud-palette-secondary) 0 0 2em;
+}
+
 /* default blazor css elements */
 #blazor-error-ui {
     background: lightyellow;
