--- a/SimTECH/SimTECH/Pages/Guide.razor
+++ b/SimTECH/SimTECH/Pages/Guide.razor
@@ -10,18 +10,20 @@
         </MudPaper>
     </MudItem>
     <MudItem xs="3">
-        <MudTreeView @bind-SelectedValue="ActiveTopic" Color="Color.Secondary" Hover="true">
-            <MudTreeViewItem @bind-Expanded="@folderOneExpanded" Value="@("Topic 1")" Icon="@(folderOneExpanded ? Icons.Custom.Uncategorized.FolderOpen : Icons.Custom.Uncategorized.Folder)">
-                <MudTreeViewItem Value="@("Subtopic 1")" Icon="@Icons.Custom.FileFormats.FileImage" />
-                <MudTreeViewItem Value="@("Subtopic 2")" Icon="@Icons.Custom.FileFormats.FileVideo" />
-            </MudTreeViewItem>
-            <MudTreeViewItem @bind-Expanded="@folderTwoExpanded" Value="@("Topic 2")" Icon="@(folderTwoExpanded ? Icons.Custom.Uncategorized.FolderOpen : Icons.Custom.Uncategorized.Folder)">
-                <MudTreeViewItem Value="@("Subtopic 3")" Icon="@Icons.Custom.FileFormats.FileExcel" />
-            </MudTreeViewItem>
-        </MudTreeView>
+        <MudPaper Class="mud-height-full">
+            <MudTreeView @bind-SelectedValue="ActiveTopic" Color="Color.Secondary" Hover="true">
+                <MudTreeViewItem @bind-Expanded="@folderOneExpanded" Value="@("Topic 1")" Icon="@(folderOneExpanded ? Icons.Custom.Uncategorized.FolderOpen : Icons.Custom.Uncategorized.Folder)">
+                    <MudTreeViewItem Value="@("Subtopic 1")" Icon="@Icons.Custom.FileFormats.FileImage" />
+                    <MudTreeViewItem Value="@("Subtopic 2")" Icon="@Icons.Custom.FileFormats.FileVideo" />
+                </MudTreeViewItem>
+                <MudTreeViewItem @bind-Expanded="@folderTwoExpanded" Value="@("Topic 2")" Icon="@(folderTwoExpanded ? Icons.Custom.Uncategorized.FolderOpen : Icons.Custom.Uncategorized.Folder)">
+                    <MudTreeViewItem Value="@("Subtopic 3")" Icon="@Icons.Custom.FileFormats.FileExcel" />
+                </MudTreeViewItem>
+            </MudTreeView>
+        </MudPaper>
     </MudItem>
     <MudItem xs="9">
-        <MudPaper>
+        <MudPaper Class="mud-height-full">
             <MudText Style="width: 100%" Typo="@Typo.subtitle1">Selected item: @ActiveTopic</MudText>
         </MudPaper>
     </MudItem>
