--- a/SimTECH/SimTECH/Pages/Index.razor
+++ b/SimTECH/SimTECH/Pages/Index.razor
@@ -64,7 +64,7 @@
                 <MudText Typo="Typo.h6">Last races</MudText>
                 @if (recentRaces != null)
                 {
-                    <MudTable Items="recentRaces" Dense="true">
+                    <MudTable id="recent-race-table" Items="@recentRaces" Dense="true">
                         <HeaderContent>
                             <MudTh>League</MudTh>
                             <MudTh>Round</MudTh>
@@ -97,6 +97,13 @@
                                 </MudText>
                             </MudTd>
                         </RowTemplate>
+                        <FooterContent>
+                            <MudTFootRow>
+                                <MudTd colspan="10">
+                                    <ScreenshotButton TargetId="recent-race-table" />
+                                </MudTd>
+                            </MudTFootRow>
+                        </FooterContent>
                     </MudTable>
                 }
             </MudPaper>
@@ -136,7 +143,10 @@
         return cycleColours[_cycler];
     }
 
-    private async Task SetExample() => await LocalStorage.SetAsync("example", _newExampleString);
+    private async Task SetExample()
+    {
+        await LocalStorage.SetAsync("example", _newExampleString);
+    }
 
     private void NavigateHome()
     {
